# Phylax

./: .gitignore  ANTI_FEATURES.md  CHANGELOG.md  CODEBASE_ARCHITECTURE.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION.md  README.md  config.yaml  context_test.txt  demo_output.txt  demo_phylax.py  graph_test_output.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test_final.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_quick.py  test_results.txt  vercel.json
ci-kits/: README.md
cli/: __init__.py  main.py
demos/: 01_basic_trace.py  02_expectations.py  03_execution_context.py  04_graph_nodes.py  05_golden_workflow.py  06_raw_evidence.py  07_error_contracts.py  08_composition.py  09_conditionals.py  10_scoping.py  11_templates.py  12_documentation.py  13_gemini_live.py  14_metrics_health.py  15_enforcement_modes.py  16_meta_enforcement.py  17_verdict_artifacts.py  18_failure_tracking.py  19_trace_diffs.py  20_exit_codes.py  21_dataset_contracts.py  22_behavioral_diff.py  23_model_simulator.py  24_guardrail_packs.py  25_multi_agent_enforcement.py  26_rag_enforcement.py  README.md
docs/: axis3-scale-safety.md  axis4-artifact-contracts.md  axis4-ecosystem-discipline.md  contract.md  correct-usage.md  errors.md  execution-context.md  failure-modes.md  failure-playbook.md  graph-model.md  invariants.md  mental-model.md  providers.md  quickstart.md  surface-enforcement.md  versioning.md  when-not-to-use.md
examples/: README.md  test_execution_context.py  test_expectations.py  test_gemini_call.py  test_graph_ascii.py  test_graph_features.py  test_graph_unit.py  test_openai_call.py
phylax/: __init__.py  agents.py  errors.py  evidence.py  expectations.py  graph.py  guardrails.py  rag.py
phylax-landing-page/: package-lock.json  package.json
phylax_guardrails/: __init__.py
sdk/: __init__.py  context.py  decorator.py  graph.py  (+1 more)
(+264 files in other folders)
